--- a/styles2.css
+++ b/styles2.css
@@ -65,8 +65,9 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 200px;
-  aspect-ratio: 1 / 1;
+  aspect-ratio: 1 / 1; /* THIS makes it a square */
+  width: 100%;
+  overflow: hidden;
 }
 
 .zine-block:hover {
@@ -83,10 +84,10 @@ body {
 
 .image-block img {
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: cover;
-  margin-bottom: 0.5rem;
-  border: 1px solid var(--border);
+  display: block;
+  border: none;
 }
 
 .footer {
