--- a/styles2.css
+++ b/styles2.css
@@ -31,7 +31,7 @@ body {
 
 .header h1 {
   font-size: 3rem;
-  text-transform: uppercase;
+ /*  text-transform: uppercase; */
   letter-spacing: 2px;
 }
 
